fix contact page on mobile devices

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -4,7 +4,7 @@
   margin: 5vh 8vw;
 }
 
-.contactPageTtitle {
+.contactPageTitle {
   font-family: 'Girassol', cursive;
   font-size: 3vw;
 }
